# pvn-finance

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
api/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: bootstrap.py  config.py  logging_config.py  main.py  worker.py
api/app/adapters/: fake.py  pluggy.py
api/app/api/: accounts.py  auth.py  categories.py  connections.py  dashboard.py  deps.py  errors.py  health.py  investments.py  me.py  rate_limit.py  rules.py  schemas.py  subscriptions.py  transactions.py  webhooks.py
api/app/application/: auth_service.py  categorization_service.py  connection_service.py  normalization.py  retry.py  scheduler.py  sync_service.py
api/app/domain/: account.py  categorization.py  category.py  connection.py  dedupe.py  investment.py  rule.py  subscription.py  transaction.py  user.py
api/app/infrastructure/: account_repository.py  category_repository.py  connection_repository.py  dashboard_repository.py  db.py  investment_repository.py  models.py  refresh_token_repository.py  rule_repository.py  security.py  subscription_repository.py  sync_log_repository.py  user_repository.py  (+2 more)
api/migrations/: env.py
api/tests/: conftest.py  test_accounts_transactions_api.py  test_auth_api.py  test_categories_seed.py  test_categorization_api.py  test_connections_api.py  test_dashboard_api.py  test_health.py  test_lgpd_hardening.py  test_retry.py  test_scale_indexes.py  test_scheduler.py  test_security.py  test_sync_service.py  test_vault.py  test_webhook_api.py
(+93 files in other folders)
