[project]
name = "consolida-api"
version = "0.1.0"
description = "Consolida — agregador financeiro pessoal (backend)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.7",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pydantic[email]>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
